--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     </div>
 </body>
-<script  src="script.js"></script>
+<script type="module" src="index.js"></script>
+<script type="module" src="importtest.js"></script>
 </html>
 
